- Modified directory structure to match my own coding style.
- Created my own header (navbar) file for the project.

- Added the following packages to the project:
  - iron:router
  - tabs:bootstrap

- Created a router.js which will eventually handle the app's routing.

- Created the Artists Mongo DB collection.

--- a/recordly-2.html
+++ b/recordly-2.html
@@ -1,14 +1,7 @@
 <head>
-  <title>recordly-2</title>
+  <title>recordly2</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+  {{>layout}}
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
